compiler/src/test/resources/amyc/execution/passing/Locals.grading.amy
module Locals
  fn foo(i: Int): Int = {
    val i: Int = 0;
    if (i == 1) { error("") }
    else { 0 }
  }

  foo(1)
end Locals
