compiler/src/test/resources/amyc/execution/failing/Locals.grading.amy
object Locals
  fn foo(i: Int): Int = {
    val i: Int = 0;
    if (i == 0) { error("") }
    else { 0 }
  }

  foo(1)
end Locals
